# myfriendtime

./: .gitignore  .prettierignore  .prettierrc.json  LICENSE  README.md  index.html  new_friend.html  package-lock.json  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.github/: RELEASE.md  RELEASE_CHECKLIST.md  WORKFLOW_CONFIG.md
.github/scripts/: check-version.sh  update-version.sh
.github/workflows/: ci.yml  prepare-release.yml  release.yml
src/: App.css  App.tsx  api.ts  main.tsx  new_friend.tsx  settings.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  entities.rs  lib.rs  main.rs
src-tauri/src/commands/: add_friend_command.rs  autostart_command.rs  delete_friend_command.rs  friends.rs  get_friends_command.rs  greet_command.rs  mod.rs  open_new_friend_command.rs  open_settings_window_command.rs  read_image_command.rs  resize_window_command.rs  systems.rs  windows.rs
src-tauri/src/entities/: friend.rs  mod.rs
src-tauri/src/support/: files.rs  mod.rs
src/assets/: countries.json  timezones.json
src/assets/css/: my_friends.css  new_friend.css  settings.css
src/compontents/: AnimatedSizeWrapper.tsx  AutoSizeWrapper.tsx  FriendItem.tsx  MyTime.tsx  SearchableSelect.tsx  SettingAbout.tsx  SettingGeneral.tsx  SettingProfile.tsx  TimeTravel.tsx
src/compontents/images/: Upload.tsx
src/compontents/ui/: CalendarView.tsx  MyTime.tsx  (+6 more)
src/pages/: MyFriends.css  MyFriends.tsx  NewFriend.tsx  Settings.tsx
src/support/: country.ts  times.ts
